--- a/.github/workflows/ex1.yaml
+++ b/.github/workflows/ex1.yaml
@@ -13,7 +13,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 'lts/*'
-      - name: Install dependencies
-        run: npm install
+      # - name: Install dependencies
+      #   run: npm install
       - name: Run tests
-        run: npm test
+        run: |
+          npm install
+          npm test
