--- a/.github/workflows/ex3_switch_node_version.yaml
+++ b/.github/workflows/ex3_switch_node_version.yaml
@@ -13,7 +13,7 @@ jobs:
         - name : setup node
           uses: actions/setup-node@v6
           with:
-            node-version: '${env.NODE_VERSION}'
+            node-version: '${{env.NODE_VERSION}}'
         - name : node version
           shell : bash
           run: |
