--- a/.github/workflows/ex3_interact_with_github_api.yaml
+++ b/.github/workflows/ex3_interact_with_github_api.yaml
@@ -18,10 +18,12 @@ jobs:
       - name: run test
         shell: bash
         run: |
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{github.token}}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            ${{env.REPO}}/issues \
-            -d '{"title":"Found a bug","body":"I'\''m having a problem with this.","assignees":["octocat"],"milestone":1,"labels":["bug"]}'
+            curl --request POST \
+                --url $REPO/issues \
+                --header 'authorization: Bearer ${{github.token}}' \
+                --header 'content-type: application/json' \
+                --data '{
+                    "title": "Automated issue for commit: ${{ steps.short_sha.outputs.sha_short }}",
+                    "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ steps.short_sha.outputs.sha_short }}_."
+                    }' \
+                --fail
