--- a/.github/workflows/ex3_interact_with_github_api.yaml
+++ b/.github/workflows/ex3_interact_with_github_api.yaml
@@ -19,7 +19,7 @@ jobs:
         shell: bash
         run: |
             curl --request POST \
-                --url ${{github.env.REPO}}}/issues \
+                --url ${{github.env.REPO}}/issues \
                 --header 'authorization: Bearer ${{github.token}}' \
                 --header 'content-type: application/json' \
                 --data '{
