--- a/.github/workflows/ex3_interact_with_github_api.yaml
+++ b/.github/workflows/ex3_interact_with_github_api.yaml
@@ -5,8 +5,6 @@ on:
 jobs:
   create-issue:
     runs-on: ubuntu-latest
-    env:
-      REPO: "https://api.github.com/repos/thibautscholaert/github-actions-training/issues"
     steps:
       - name: checkout
         uses: actions/checkout@v6
@@ -19,7 +17,7 @@ jobs:
         shell: bash
         run: |
             curl --request POST \
-                --url ${{github.env.REPO}}/issues \
+                --url https://api.github.com/repos/thibautscholaert/github-actions-training/issues/issues \
                 --header 'authorization: Bearer ${{github.token}}' \
                 --header 'content-type: application/json' \
                 --data '{
