--- a/.github/workflows/ex3_interact_with_github_api.yaml
+++ b/.github/workflows/ex3_interact_with_github_api.yaml
@@ -5,6 +5,8 @@ on:
 jobs:
   create-issue:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
     env:
       REPO: "https://api.github.com/repos/thibautscholaert/github-actions-training"
     steps:
