--- a/.github/workflows/ex4.yaml
+++ b/.github/workflows/ex4.yaml
@@ -5,6 +5,6 @@ on:
 
 jobs:
   test:
-    uses: thibautscholaert/github-actions-training/.github/workflows/test.yml@main 
+    uses: thibautscholaert/github-actions-training/.github/workflows/test.yaml@main 
     with:
       version: '20'
