--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,10 +17,9 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: 'lts/*'
-      # - name: Install dependencies
-      #   run: npm install
+          node-version: '${{inputs.version}}'
+      - name: Install dependencies
+        run: npm install
       - name: Run tests
         run: |
-          npm install
           npm test
