--- a/.github/workflows/ex6-build-docker.yaml
+++ b/.github/workflows/ex6-build-docker.yaml
@@ -34,6 +34,7 @@ jobs:
             npm test
   docker-build:
         runs-on: ubuntu-latest
+        if: ${{ github.ref == 'main' }}
         steps:
             - name: checkout
               uses: actions/checkout@v6
