--- a/.github/workflows/ex6-build-docker.yaml
+++ b/.github/workflows/ex6-build-docker.yaml
@@ -34,8 +34,10 @@ jobs:
             npm test
   docker-build:
         runs-on: ubuntu-latest
-        if: ${{ github.ref == 'main' }}
+        if: ${{ github.ref_name == 'main' }}
         steps:
+            - name: echo
+              run: echo ${{github.ref_name}} 
             - name: checkout
               uses: actions/checkout@v6
             - name : setup node
